--- a/buildchain/package.json
+++ b/buildchain/package.json
@@ -8,7 +8,8 @@
     },
     "dependencies": {
         "vue": "^3.2.0",
-        "axios": "^0.22.0"
+        "axios": "^0.22.0",
+        "pinia": "^2.0.8"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^13.0.0",
