--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     ],
     "require": {
         "craftcms/cms": "^3.3.0",
-        "nystudio107/craft-plugin-vite": "^1.0.0"
+        "nystudio107/craft-plugin-vite": "^1.0.0",
+        "league/csv": "^8.2 || ^9.0"
     },
     "require-dev": {
         "codeception/codeception": "^3.0",
