--- a/buildchain/package.json
+++ b/buildchain/package.json
@@ -20,7 +20,8 @@
         "tailwindcss": "^3.0.0",
         "vite": "^2.7.0",
         "vite-plugin-restart": "0.0.2",
-        "vue-draggable-next": "^2.1.0"
+        "vue-draggable-next": "^2.1.0",
+        "vue3-click-away": "^1.2.0"
     },
     "scripts": {
         "dev": "vite",
