--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require": {
         "craftcms/cms": "^3.6.0",
         "nystudio107/craft-plugin-vite": "^1.0.0",
-        "league/csv": "^8.2 || ^9.0"
+        "league/csv": "^8.2 || ^9.0",
+        "yii2tech/csv-grid": "^1.0.5"
     },
     "require-dev": {
         "codeception/codeception": "^3.0",
