--- a/buildchain/package.json
+++ b/buildchain/package.json
@@ -7,9 +7,9 @@
         "url": "https://percipio.london"
     },
     "dependencies": {
-        "vue": "^3.2.0",
         "axios": "^0.22.0",
-        "pinia": "^2.0.8"
+        "pinia": "^2.0.8",
+        "vue": "^3.2.0"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^13.0.0",
