feat: created a storage/logs/attendees.log file where all the data gets written to created a slack buzzer where all the errors gets send to created a dedicated storage path for writing the CSV files written a console command thats able to delete CSV files older than 60 days

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "craftcms/cms": "^3.6.0",
         "nystudio107/craft-plugin-vite": "^1.0.0",
         "league/csv": "^8.2 || ^9.0",
+        "percipioglobal/craft-notifications": "^1.2.3",
         "yii2tech/csv-grid": "^1.0.5"
     },
     "require-dev": {
@@ -35,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "percipiolondon\\attendees\\": "src/"
+            "percipiolondon\\attendees\\": "src/",
+            "percipiolondon\\notifications\\": "src/notifications"
         }
     },
     "extra": {
